# LampPost

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
cmake/: tbb_build.cmake
config/: default.cfg  default_client.cfg  default_server.cfg
include/lamppost/: Filesystem.h  Identifiable.h  LampPost.h  LampPostConfiguration.h  LowLevel.h  PluginConfiguration.h  PluginInstance.h  PluginManager.h  PluginManagerConfiguration.h  PluginTemplate.h  PluginTemplateConfiguration.h  PluginTemplateInfo.h  RunState.h  Version.h
include/lamppost/bus/: ActionConsumer.h  ActionProvider.h  Bus.cpp  Bus.h  BusParticipant.h  Publisher.h  Subscriber.h
include/lamppost/config/: ConfigurationManager.h
include/lamppost/data/: RawBytes.h
include/lamppost/exceptions/: ArgumentNullException.h  DuplicateKeyException.cpp  DuplicateKeyException.h  Exception.h  IndexOutOfBoundsException.h  InvalidOperationException.h  KeyNotFoundException.h  OperationFailedException.h
include/lamppost/log/: Log.h
include/lamppost/messages/: Data.h  DataBase.h  Datagram.h  Message.h  RawDatagram.h
include/lamppost/platformspecific/windows/service/: Service.h
include/lamppost/plugin/: PluginConfiguration.h  PluginInstance.h  PluginManager.h  PluginTemplate.h  PluginTemplateConfiguration.h
include/lamppost/settings/: SettingsManager.h
include/lamppost/utilities/: AntMatcher.h  Uuid.h
patches/tbb/: gmake_to_make.patch
schemas/: FBDatagram.fbs  FBMessage.fbs  Message.fbs
src/: main.cpp
src/lamppost/: Filesystem.cpp  Identifiable.cpp  LampPost.cpp  PluginInstance.cpp  PluginManager.cpp  PluginTemplate.cpp
src/lamppost/bus/: ActionConsumer.cpp  ActionProvider.cpp  Bus.cpp  BusParticipant.cpp  Publisher.cpp  Subscriber.cpp
src/lamppost/config/: ConfigurationManager.cpp
src/lamppost/data/: RawBytes.cpp
src/lamppost/exceptions/: ArgumentNullException.cpp  DuplicateKeyException.cpp  Exception.cpp  IndexOutOfBoundsException.cpp  InvalidOperationException.cpp  KeyNotFoundException.cpp  OperationFailedException.cpp
src/lamppost/log/: Log.cpp
src/lamppost/lowlevel/: Osx.cpp  Unix.cpp  Windows.cpp
src/lamppost/messages/: Data.cpp  DataBase.cpp  Datagram.cpp  Message.cpp  RawDatagram.cpp
src/lamppost/platformspecific/windows/: Windows.cpp
src/lamppost/platformspecific/windows/service/: Service.cpp  main.cpp
src/lamppost/platformspecific/xnix/: Xnix.cpp
src/lamppost/plugin/: PluginInstance.cpp  PluginManager.cpp  PluginTemplate.cpp
src/lamppost/settings/: SettingsManager.cpp
src/lamppost/utilities/: AntMatcher.cpp  Uuid.cpp
src/plugins/downloader/: Curl.cpp  Curl.h  Downloader.cpp  Downloader.h
src/plugins/link/: Link.cpp  Link.h
src/plugins/sysinfo/: SysInfo.cpp  SysInfo.h
test/lamppost/: LampPostConfigurationTest.cpp  PluginManagerConfigurationTest.cpp
test/lamppost/bus/: BusTest.cpp
test/lamppost/messages/: DataTest.cpp  DatagramTest.cpp  MessageTest.cpp  RawDatagramTest.cpp
